// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with challenge suggestion renders correctly 1`] = `
<StepDetailScreen
  CenterHeader={
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Completed Step
    </MyText>
  }
  RightHeader={null}
  bottomButtonProps={null}
  markdown="roge rules"
  text="SCOTTY"
/>
`;

exports[`without challenge suggestion renders correctly 1`] = `
<StepDetailScreen
  CenterHeader={
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Completed Step
    </MyText>
  }
  RightHeader={null}
  bottomButtonProps={null}
  markdown={null}
  text="SCOTTY"
/>
`;
